prepare for publish 0.1.3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "tdf_utils"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["qiuzhanghua <qiuzhanghua@icloud.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+description = "Utilities, such as tree"
+homepage = "https://github.com/qiuzhanghua/tdf_utils/"
+repository = "https://github.com/qiuzhanghua/tdf_utils/"
+readme = "README.md"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
